--- a/themes/default/css/style.css
+++ b/themes/default/css/style.css
@@ -49,8 +49,8 @@ a:hover {
 }
 
 .tabs-tool {
-    border: 0;
-    border-bottom: solid 1px #95B8E7;
+    /* border: 0;
+    border-bottom: solid 1px #95B8E7; */
 }
 
 ul {
