--- a/themes/css/icon.css
+++ b/themes/css/icon.css
@@ -1137,6 +1137,7 @@
 .icon-new_red {background:url("../image/icons/new_red.png") no-repeat center center; } 
 .icon-next_blue {background:url("../image/icons/next_blue.png") no-repeat center center; } 
 .icon-next_green {background:url("../image/icons/next_green.png") no-repeat center center; } 
+.icon-no {background:url("../image/icons/no.png") no-repeat center center; } 
 .icon-note {background:url("../image/icons/note.png") no-repeat center center; } 
 .icon-note_add {background:url("../image/icons/note_add.png") no-repeat center center; } 
 .icon-note_delete {background:url("../image/icons/note_delete.png") no-repeat center center; } 
@@ -1389,6 +1390,7 @@
 .icon-ruby_key {background:url("../image/icons/ruby_key.png") no-repeat center center; } 
 .icon-ruby_link {background:url("../image/icons/ruby_link.png") no-repeat center center; } 
 .icon-ruby_put {background:url("../image/icons/ruby_put.png") no-repeat center center; } 
+.icon-save {background:url("../image/icons/save.png") no-repeat center center; } 
 .icon-script {background:url("../image/icons/script.png") no-repeat center center; } 
 .icon-script_add {background:url("../image/icons/script_add.png") no-repeat center center; } 
 .icon-script_code {background:url("../image/icons/script_code.png") no-repeat center center; } 
