--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -107,7 +107,7 @@ table td {
     position: relative;
     top: 1px;
     left: -3px;
-    background: url("../themes/icons/rainbow.png") no-repeat left;
+    background: url("../image/icons/rainbow.png") no-repeat left;
     background-position: 5px;
 }
 
