--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -8,6 +8,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 .tree-node {
     padding: 3px 0;
 }
+
+/* 表格行高 */
 .datagrid-row {
     height: 30px;
 }
