--- a/themes/css/bootstrap-ext.css
+++ b/themes/css/bootstrap-ext.css
@@ -1,5 +1,32 @@
-.top { margin-top: 5px; }
-.top-2 { margin-top: 10px; }
+body {
+    font-family: "microsoft yahei", "Times New Roman", "宋体", Times, serif;
+    letter-spacing: 1px;
+}
 
-.bottom { margin-bottom: 5px; }
-.bottom-2 { margin-bottom: 10px; }
+.margin-top-5 {
+    margin-top: 5px;
+}
+
+.margin-top-10 {
+    margin-top: 10px;
+}
+
+.margin-top-15 {
+    margin-top: 15px;
+}
+
+.margin-top-20 {
+    margin-top: 20px;
+}
+
+.margin-bottom-5 {
+    margin-bottom: 5px;
+}
+
+.margin-bottom-10 {
+    margin-bottom: 10px;
+}
+
+.fa.pull-left {
+    padding: 4px 0;
+}
