--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -323,7 +323,7 @@ table td {
     max-width: 131px;
     text-align: right;
     padding: 5px 5px 0 2px;
-    font-weight: bold;
+    font-weight: normal;
     vertical-align: top;
     font-family: "microsoft yahei", "Times New Roman", "宋体", Times, serif;
 }
