--- a/themes/css/style.css
+++ b/themes/css/style.css
@@ -228,6 +228,11 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     border-right-width: 1px;
 }
 
+.border_left_bottom {
+    border-left-width: 1px;
+    border-bottom-width: 1px;
+}
+
 .border_right_bottom {
     border-right-width: 1px;
     border-bottom-width: 1px;
