--- a/demo/topjui/css/style.css
+++ b/demo/topjui/css/style.css
@@ -9,13 +9,14 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 /* 树形节点高度 */
 .tree-node {
-    padding: 10px 0 !important;
+    padding: 10px 0!important;
+    border-bottom: dashed 1px #ddd;
 }
 
 /* 左侧导航菜单高度及样式 */
 .tree li {
     /*height: 38px;*/
-    border-bottom: dashed 1px #dddddd;
+    /*border-bottom: dashed 1px #dddddd;*/
 }
 
 /* 树形节点文字大小 */
