--- a/demo/topjui/css/style.css
+++ b/demo/topjui/css/style.css
@@ -9,7 +9,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 /* 树形节点高度 */
 .tree-node {
-    padding: 10px 0!important;
+    padding: 10px 0 !important;
     border-bottom: dashed 1px #ddd;
 }
 
@@ -165,6 +165,11 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     height: 24px !important;
     line-height: 24px !important;
     font-size: 12px;
+    padding-left: 5px;
+}
+
+.submenubutton .menu-text {
+    padding-left: 28px;
 }
 
 /* 分页列表 */
