--- a/demo/topjui/css/style.css
+++ b/demo/topjui/css/style.css
@@ -174,7 +174,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 /* 对话框按钮高度 */
 .dialog-button .l-btn {
-    padding: 5px;
+    padding: 3px 5px;
 }
 
 /* 分页列表 */
