--- a/demo/topjui/themes/ewsd-bootstrap/purple.css
+++ b/demo/topjui/themes/ewsd-bootstrap/purple.css
@@ -1,6 +1,6 @@
 ﻿/*easyui mian*/
-#west {border:0px;background:#2c3b41;}
-.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border: #1e282c;background:#1e282c;color:#777; line-height:25px;;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#1e282c,endColorstr=#1e282c,GradientType=0)}
+#west {border:solid 1px;background:#2c3b41;}
+.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color: #1e282c;background:#1e282c;color:#777; line-height:25px;;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#1e282c,endColorstr=#1e282c,GradientType=0)}
 .layout-panel-west .panel-header .panel-title{padding-left:15px;height:25px;color:#4b646f;line-height:25px;}
 .label-mes{position:absolute;top:3px;display:none;margin-left:13px;padding:2px 3px;border-radius:3px;text-align:center;font-size:9px;line-height:.9;}
 .label-success{background-color:#00a65a !important;}
@@ -20,8 +20,8 @@
 #west .accordion{border:0px;background: #222d32;}
 #west .accordion-body {border:0px;background:#2c3b41;}
 #west .accordion .accordion-header{height: 30px;border:0px;border-left:3px #222d32 solid;background: #222d32;color:#fff;line-height: 30px;}
-#west .accordion .accordion-header-selected{border-left:3px #dd4b39 solid;background: #222d32;}
-#west .accordion .accordion-header:hover{border-left:3px #dd4b39 solid;background: #1e282c;color: #fff;}
+#west .accordion .accordion-header-selected{border-left:3px #605ca8 solid;background: #222d32;}
+#west .accordion .accordion-header:hover{border-left:3px #605ca8 solid;background: #1e282c;color: #fff;}
 #west .accordion .accordion-header-selected .panel-title{color:#fff;}
 #west .accordion .accordion-header .panel-title:hover{color: #fff;}
 #west .layout-split-west{border-right: 3px solid #efefef;}
@@ -44,17 +44,17 @@ background: url('base/images/accordion_arrows2.png') no-repeat 0 0;
  .accordion-header .accordion-expand {background: url('../../topjui/content/themes/base/images/accordion_arrows3.png') no-repeat -16px 0;}
 .user-image {float: left;margin-top: -6px;margin-right: 10px;width: 30px;height: 30px;border-radius: 50%;}
 .user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family:'Microsoft YaHei',Arial,Verdana;}
-.user-header{ padding-top:20px; background:#dd4b39; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
+.user-header{ padding-top:20px; background:#605ca8; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
 .user-header img{width:100px;height:100px;border-radius:50%;}
 
-#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #dd4b39;border-top-width: 3px;}
-.banner{width: 100%;height: 50px;background: #dd4b39;color: #fff;}
+#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #605ca8;border-top-width: 3px;}
+.banner{width: 100%;height: 50px;background: #605ca8;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px;background:#d73925; text-align:center; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#555299; text-align:center; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 #west .panel-tool a{opacity:0.8;filter:alpha(opacity=20);}
 /*easyui inner*/
-.window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #DD4B39;}
+.window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #605ca8;}
 .window .window-body{border-width:0px;}
 
 .window .window-header .panel-tool{right: 12px;}
@@ -68,19 +68,21 @@ background: url('base/images/accordion_arrows2.png') no-repeat 0 0;
 .datagrid-header-row{padding:0 10px 0 10px;height:30px;background: #f9f9f9;}
 .datagrid-row-over, .datagrid-header td.datagrid-header-over{background: #e7eaec;}
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{padding:0 7px;white-space: normal;}
-.accordion .accordion-header-selected {background: #e76150;}
+.accordion .accordion-header-selected {background: #605ca8;}
 /*btn*/
+
 .bannerbtn{padding:15px 10px 0 10px;height:36px;color:#fff;text-decoration:none;line-height:36px;}
-.bannerbtn:hover{background:#d73925;filter:none;}
+.bannerbtn:hover{background:#555299;filter:none;}
 .endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
 .l-btn-left{margin:2px;}
-.switchbutton-on{background:#eb5f4e;color:#fff;}
+.switchbutton-on{background:#6863b7;color:#fff;}
 .switchbutton-off{background:#E1E1E1;color:#000;}
 /*顶部菜单*/
 .bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
-#north .topmenu{border-right:1px #d73925 solid;background:#dd4b39;text-align:center}
-#north .topmenu:hover{background:#d73925;text-align:center}
-#north .selected{border-right:1px #d73925 solid;background:#d73925;text-align:center}
-#north .splitborder{width:1px;background:#d73925;}
+#north .topmenu{border-right:1px #555299 solid;background:#605ca8;text-align:center}
+#north .topmenu:hover{background:#555299;text-align:center}
+#north .selected{border-right:1px #555299 solid;background:#555299;text-align:center}
+#north .splitborder{width:1px;background:#555299;}
+
