--- a/demo/topjui/themes/ewsd-bootstrap/blacklight.css
+++ b/demo/topjui/themes/ewsd-bootstrap/blacklight.css
@@ -42,7 +42,7 @@
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color: #2c3b41;border-top-width: 3px;}
 .banner{width: 100%;height: 50px;background: #2c3b41;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px;background:#2c3b41; text-align:center; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#2c3b41; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 /*easyui inner*/
 .window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #2c3b41;}
@@ -61,7 +61,7 @@
 .accordion .accordion-header-selected {background: #2c3b41;}
 /*btn*/
 
-.bannerbtn{padding:15px 10px 0 10px;height:36px;color:#fff;text-decoration:none;line-height:36px;}
+.bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
 .bannerbtn:hover{background:#1e282c;filter:none;}
 .endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
 .l-btn-left{margin:2px;}
