--- a/demo/topjui/themes/ewsd-bootstrap/green.css
+++ b/demo/topjui/themes/ewsd-bootstrap/green.css
@@ -47,7 +47,7 @@
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color: #00a65a;border-top-width: 3px;}
 .banner{width: 100%;height: 50px;background: #00a65a;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px;background:#008d4c; text-align:center; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#008d4c; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 #west .panel-tool a{opacity:0.8;filter:alpha(opacity=20);}
 /*easyui inner*/
@@ -67,7 +67,7 @@
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{padding:0 7px;white-space: normal;}
 .accordion .accordion-header-selected {background: #00a65a;}
 /*btn*/
-.bannerbtn{padding:15px 10px 0 10px;height:36px;color:#fff;text-decoration:none;line-height:36px;}
+.bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
 .bannerbtn:hover{background:#008d4c;filter:none;}
 .endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
 .l-btn-left{margin:2px;}
