--- a/demo/topjui/themes/ewsd-bootstrap/greenlight.css
+++ b/demo/topjui/themes/ewsd-bootstrap/greenlight.css
@@ -39,7 +39,7 @@
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color: #00a65a;border-top-width: 3px;}
 .banner{width: 100%;height: 50px;background: #00a65a;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px;background:#008d4c; text-align:center; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#008d4c; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 /*easyui inner*/
 .window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #00a65a;}
@@ -58,14 +58,14 @@
 .accordion .accordion-header-selected {background: #00a65a;}
 /*btn*/
 
-.bannerbtn{padding:15px 10px 0 10px;height:36px;color:#fff;text-decoration:none;line-height:36px;}
+.bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
 .bannerbtn:hover{background:#008d4c;filter:none;}
 .endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
 .l-btn-left{margin:2px;}
 .switchbutton-on{background:#03b463;color:#fff;}
 .switchbutton-off{background:#E1E1E1;color:#000;}
 /*顶部菜单*/
-.bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
+.bannerMenu{padding:7px 12px 7px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
 #north .topmenu{border-right:1px #008d4c solid;background:#00a65a;text-align:center}
