--- a/demo/topjui/themes/ewsd-bootstrap/redlight.css
+++ b/demo/topjui/themes/ewsd-bootstrap/redlight.css
@@ -40,7 +40,7 @@
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color: #dd4b39;border-top-width: 3px;}
 .banner{width: 100%;height: 50px;background: #dd4b39;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{background:#d73925;width: 225px; font-weight:bold; font-size: 20px;line-height: 25px; text-align:center; }
+.banner .webname{background:#d73925;width: 225px; font-weight:bold; font-size: 20px;line-height: 25px; text-align:left; padding-left:10px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 /*easyui inner*/
 .window{padding: 0;border-width: 3px 1px 1px 1px;border-top-color: #DD4B39;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-radius: 5px;-webkit-border-radius: 5px;}
@@ -58,13 +58,7 @@
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{white-space: normal;padding:0 7px;}
 .accordion .accordion-header-selected {background: #e76150;}
 /*btn*/
-.bannerbtn {
- color:#fff;
- text-decoration:none;
- height:36px;
- padding:15px 10px 0 10px;
- line-height:36px;
-}
+.bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
 .bannerbtn:hover{
     background: #d73925;filter: none;
 }
