--- a/demo/topjui/css/style.css
+++ b/demo/topjui/css/style.css
@@ -29,12 +29,12 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 /* 调整树形图标显示位置 */
 .tree-icon {
-    margin-top: 1px !important
+    margin-top: 1px !important;
 }
 
 /* 表格行高 */
 .datagrid-row {
-    height: 36px;
+    height: 36px !important;
 }
 
 /* 表格单元格 */
