--- a/demo/topjui/css/style.css
+++ b/demo/topjui/css/style.css
@@ -561,3 +561,9 @@ table.gridtable td {
 table.gridtable .bold {
     font-weight: bold;
 }
+
+.topjuiTheme {
+    width: 20px;
+    height: 20px;
+    margin: 10px 0 20px;
+}
