--- a/demo/topjui/themes/yushan/topjui.blacklight.css
+++ b/demo/topjui/themes/yushan/topjui.blacklight.css
@@ -1,7 +1,8 @@
-﻿.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color:#d3d3d3;background:#f9fafc;color:#777;}
+﻿/*easyui mian*/
+.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color:#d3d3d3;background:#f9fafc;color:#777;}
 .layout-panel-west .panel-header .panel-title{padding-left:20px;height:30px;color:#777;line-height:30px;}
 .label-mes{position:absolute;top:3px;display:none;margin-left:13px;padding:2px 3px;border-radius:3px;text-align:center;font-size:9px;line-height:.9;}
-.label-success{background-color:#f39c12 !important;}
+.label-success{background-color:#00a65a !important;}
 #west .tree-icon{margin-top: 9px;}
 #west .tree-hit{margin-top: 7px;}
 #west .tree-node{padding-left:20px;height: 35px;line-height:30px;}
@@ -17,9 +18,9 @@
 #west .panel-title{padding-left: 20px;height: 30px;font-size: 12px;line-height: 30px;}
 #west .accordion{background: #F9FAFC;}
 #west .accordion-body {border:0px;}
-#west .accordion .accordion-header{height: 30px;border:0px;border-left:3px #F9FAFC solid;background: #f9fafc;color:#444;line-height: 30px;}
-#west .accordion .accordion-header-selected{border-left:3px #00a65a solid;background: #e7eaec;}
-#west .accordion .accordion-header:hover{border-left:3px #00a65a solid;background: #e7eaec;color: #000;}
+#west .accordion .accordion-header{height: 30px;border-top:solid 1px #ddd;border-left:3px #F9FAFC solid;background: #f9fafc;color:#444;line-height: 30px;}
+#west .accordion .accordion-header-selected{border-left:3px #2c3b41 solid;background: #e7eaec;border-bottom:solid 1px #ddd;}
+#west .accordion .accordion-header:hover{border-left:3px #2c3b41 solid;background: #e7eaec;color: #000;}
 #west .accordion .accordion-header-selected .panel-title{color:#444;}
 #west .accordion .accordion-header .panel-title:hover{color: #333;}
 #west .layout-split-west{border-right: 3px solid #efefef;}
@@ -27,22 +28,24 @@
 #west .tree-collapsed:before{content:"\f0da";}
 #west .tree-expanded { display:inline-block;margin-top:13px; margin-right:0px;background:url(''); color:#000;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
 #west .tree-expanded:before{content:"\f0d7";}
+
+#west .layout-split-west{border-right: 3px solid #efefef;}
 #center .tabs-panels{border-bottom: 0px;}
 #west .panel-header,#west .panel-body{border:0px;}
 
+
 .user-image {float: left;margin-top: -6px;margin-right: 10px;width: 30px;height: 30px;border-radius: 50%;}
-.user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family:'Microsoft YaHei',Arial,Verdana;}
-.user-header{ padding-top:20px; background:#00a65a; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
+.user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family: 'Microsoft YaHei',Arial,Verdana;}
+.user-header{ padding-top:20px; background:#2c3b41; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
 .user-header img{width:100px;height:100px;border-radius:50%;}
 
-
-#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #00a65a;border-top-width: 3px;}
-.banner{width: 100%;height: 50px;background: #00a65a;color: #fff;}
+#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #2c3b41;border-top-width: 3px;}
+.banner{width: 100%;height: 50px;background: #2c3b41;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px;background:#008d4c; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#2c3b41; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 /*easyui inner*/
-.window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #00a65a;}
+.window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #2c3b41;}
 .window .window-body{border-width:0px;}
 .window .window-header .panel-tool{right: 12px;}
 .window .window-header{height:30px;border-color: #e7eaec;background:#f9f9f9;}
@@ -55,20 +58,20 @@
 .datagrid-header-row{padding:0 10px 0 10px;height:30px;background: #f9f9f9;}
 .datagrid-row-over, .datagrid-header td.datagrid-header-over{background: #e7eaec;}
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{padding:0 7px;white-space: normal;}
-.accordion .accordion-header-selected {background: #00a65a;}
+.accordion .accordion-header-selected {background: #2c3b41;}
 /*btn*/
 
 .bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
-.bannerbtn:hover{background:#008d4c;filter:none;}
+.bannerbtn:hover{background:#1e282c;filter:none;}
 .endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
 .l-btn-left{margin:2px;}
-.switchbutton-on{background:#03b463;color:#fff;}
+.switchbutton-on{background:#f7a31e;color:#fff;}
 .switchbutton-off{background:#E1E1E1;color:#000;}
 /*顶部菜单*/
-.bannerMenu{padding:7px 12px 7px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
+.bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
-#north .topmenu{border-right:1px #008d4c solid;background:#00a65a;text-align:center}
-#north .topmenu:hover{background:#008d4c;text-align:center}
-#north .selected{border-right:1px #008d4c solid;background:#008d4c;text-align:center}
-#north .splitborder{width:1px;background:#008d4c;}
+#north .topmenu{border-right:1px #1e282c solid;background:#2c3b41;text-align:center}
+#north .topmenu:hover{background:#1e282c;text-align:center}
+#north .selected{border-right:1px #1e282c solid;background:#1e282c;text-align:center}
+#north .splitborder{width:1px;background:#1e282c;}
