--- a/demo/topjui/themes/yushan/topjui.purplelight.css
+++ b/demo/topjui/themes/yushan/topjui.purplelight.css
@@ -17,8 +17,8 @@
 #west .panel-title{padding-left:20px;height:30px;font-size:12px;line-height:30px;}
 #west .accordion{background:#F9FAFC;}
 #west .accordion-body{border:0;}
-#west .accordion .accordion-header{height:30px;border:0;border-left:3px #F9FAFC solid;background:#f9fafc;color:#444;line-height:30px;}
-#west .accordion .accordion-header-selected{border-left:3px #605ca8 solid;background:#e7eaec;}
+#west .accordion .accordion-header{height:30px;border-top:solid 1px #ddd;border-left:3px #F9FAFC solid;background:#f9fafc;color:#444;line-height:30px;}
+#west .accordion .accordion-header-selected{border-left:3px #605ca8 solid;background:#e7eaec;border-bottom:solid 1px #ddd;}
 #west .accordion .accordion-header:hover{border-left:3px #605ca8 solid;background:#e7eaec;color:#000;}
 #west .accordion .accordion-header-selected .panel-title{color:#444;}
 #west .accordion .accordion-header .panel-title:hover{color:#333;}
@@ -38,7 +38,7 @@
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color:#605ca8;border-top-width:3px;}
 .banner{width:100%;height:50px;background:#605ca8;color:#fff;}
 .banner .l-btn-text{margin:0;}
-.banner .webname{width:215px;background:#555299;text-align:left; padding-left:10px;font-weight:700;font-size:20px;line-height:25px;}
+.banner .webname{width:225px;background:#555299;text-align:left; padding-left:10px;font-weight:700;font-size:20px;line-height:25px;}
 .panel-icon,.panel-tool{margin-top:-6px;}
 .window{padding:0;border-width:3px 1px 1px 1px;-webkit-border-radius:5px;border-radius:5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color:#605ca8;}
 .window .window-body{border-width:0;}
@@ -60,7 +60,7 @@
 .l-btn-left{margin:2px;}
 .switchbutton-on{background:#6863b7;color:#fff;}
 .switchbutton-off{background:#E1E1E1;color:#000;}
-.bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
+.bannerMenu{padding:7px 12px 7px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
 #north .topmenu{border-right:1px #555299 solid;background:#605ca8;text-align:center}
