--- a/demo/topjui/themes/yushan/topjui.red.css
+++ b/demo/topjui/themes/yushan/topjui.red.css
@@ -19,8 +19,8 @@
 #west .panel-title{padding-left:18px;height: 30px;color:#b8c7ce;font-size: 12px; line-height: 30px;}
 #west .accordion{border:0px;background: #222d32;}
 #west .accordion-body {border:0px;background:#2c3b41;}
-#west .accordion .accordion-header{height: 30px;border:0px;border-left:3px #222d32 solid;background: #222d32;color:#fff;line-height: 30px;}
-#west .accordion .accordion-header-selected{border-left:3px #dd4b39 solid;background: #222d32;}
+#west .accordion .accordion-header{height: 30px;border-top:solid 1px #2c3b41;border-left:3px #222d32 solid;background: #222d32;color:#fff;line-height: 30px;}
+#west .accordion .accordion-header-selected{border-left:3px #dd4b39 solid;background: #222d32;border-bottom:solid 1px #2c3b41;}
 #west .accordion .accordion-header:hover{border-left:3px #dd4b39 solid;background: #1e282c;color: #fff;}
 #west .accordion .accordion-header-selected .panel-title{color:#fff;}
 #west .accordion .accordion-header .panel-title:hover{color: #fff;}
@@ -35,13 +35,13 @@
 #west .panel-tool a{opacity:0.8;filter:alpha(opacity=20);}
 #west .panel-tool a:hover{opacity:1;filter:alpha(opacity=100);}
 #west .accordion-collapse {
-background: url('base/images/accordion_arrows2.png') no-repeat 0 0;
+background: url('../../themes/yushan/images/accordion_arrows2.png') no-repeat 0 0;
 }
 #west .accordion-expand {
-  background: url('base/images/accordion_arrows2.png') no-repeat -16px 0;
+  background: url('../../themes/yushan/images/accordion_arrows2.png') no-repeat -16px 0;
 }
- .accordion-header .accordion-collapse {background: url('../../topjui/content/themes/base/images/accordion_arrows3.png') no-repeat 0 0;}
- .accordion-header .accordion-expand {background: url('../../topjui/content/themes/base/images/accordion_arrows3.png') no-repeat -16px 0;}
+ .accordion-header .accordion-collapse {background: url('../../themes/yushan/images/accordion_arrows3.png') no-repeat 0 0;}
+ .accordion-header .accordion-expand {background: url('../../themes/yushan/images/accordion_arrows3.png') no-repeat -16px 0;}
 .user-image {float: left;margin-top: -6px;margin-right: 10px;width: 30px;height: 30px;border-radius: 50%;}
 .user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family:'Microsoft YaHei',Arial,Verdana;}
 .user-header{ padding-top:20px; background:#dd4b39; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
