--- a/demo/topjui/themes/yushan/topjui.redlight.css
+++ b/demo/topjui/themes/yushan/topjui.redlight.css
@@ -18,9 +18,9 @@
 #west .panel-title{font-size: 12px;height: 30px;line-height: 30px;padding-left: 20px;}
 #west .accordion{background: #F9FAFC;}
 #west .accordion-body {border:0px;}
-#west .accordion .accordion-header{background: #f9fafc;height: 30px;line-height: 30px;border:0px;color:#444;border-left:3px #F9FAFC solid;}
-#west .accordion .accordion-header-selected{background: #e7eaec;border-left:3px #3c8dbc solid;}
-#west .accordion .accordion-header:hover{background: #e7eaec;color: #000;border-left:3px #3c8dbc solid;}
+#west .accordion .accordion-header{background: #f9fafc;height: 30px;line-height: 30px;border-top:solid 1px #ddd;color:#444;border-left:3px #F9FAFC solid;}
+#west .accordion .accordion-header-selected{background: #e7eaec;border-left:3px #dd4b39 solid;border-bottom:solid 1px #ddd;}
+#west .accordion .accordion-header:hover{background: #e7eaec;color: #000;border-left:3px #dd4b39 solid;}
 #west .accordion .accordion-header-selected .panel-title{color:#444}
 #west .accordion .accordion-header .panel-title:hover{color: #333;}
 #west .layout-split-west{border-right: 3px solid #efefef;}
@@ -30,19 +30,20 @@
 #west .tree-expanded:before{content:"\f0d7"}
 #center .tabs-panels{border-bottom: 0px;}
 #west .panel-header,#west .panel-body{border:0px}
+
+
 .user-image {float: left;width: 30px;height: 30px;border-radius: 50%;margin-right: 10px;margin-top: -6px;}
 .user-name {padding-top:3px;display:block; float: left;width:120px;overflow:hidden;font-family:'Microsoft YaHei',Arial,Verdana}
-.user-header{text-align:center; background:#3c8dbc; padding-top:20px;font-family:'Microsoft YaHei',Arial,Verdana; color:#fff}
+.user-header{text-align:center; background:#dd4b39; padding-top:20px;font-family:'Microsoft YaHei',Arial,Verdana; color:#fff}
 .user-header img{width:100px;height:100px;border-radius:50%}
 
-
-#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #3c8dbc;border-top-width: 3px;}
-.banner{width: 100%;height: 50px;background: #3c8dbc;color: #fff;}
+#center .tabs li.tabs-selected a.tabs-inner{border-top-color: #dd4b39;border-top-width: 3px;}
+.banner{width: 100%;height: 50px;background: #dd4b39;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{background:#367fa9;width: 225px; font-weight:bold; font-size: 20px;line-height: 25px; text-align:left; padding-left:10px; }
+.banner .webname{background:#d73925;width: 225px; font-weight:bold; font-size: 20px;line-height: 25px; text-align:left; padding-left:10px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
 /*easyui inner*/
-.window{padding: 0;border-width: 3px 1px 1px 1px;border-top-color: #3c8dbc;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-radius: 5px;-webkit-border-radius: 5px;}
+.window{padding: 0;border-width: 3px 1px 1px 1px;border-top-color: #DD4B39;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-radius: 5px;-webkit-border-radius: 5px;}
 .window .window-body{border-width:0px;}
 .window .window-header .panel-tool{right: 12px;}
 .window .window-header{border-color: #e7eaec;background:#f9f9f9;height:30px;}
@@ -55,25 +56,28 @@
 .datagrid-header-row{background: #f9f9f9;height:30px;padding:0 10px 0 10px;}
 .datagrid-row-over, .datagrid-header td.datagrid-header-over{background: #e7eaec;}
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{white-space: normal;padding:0 7px;}
-.accordion .accordion-header-selected {background: #3c8dbc;}
+.accordion .accordion-header-selected {background: #e76150;}
 /*btn*/
-
 .bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
-.bannerbtn:hover{background:#367fa9;filter:none;}
-.endbtndiv{padding:8px 10px 8px 0;border-top:1px solid #f0f0f0;background:#f9f9f9;text-align:right;}
-.l-btn-left{margin:2px;}
-.btns,.btns:hover{width:60px;height:26px;border-color:#4cae4c;background:#5cb85c;color:#fff;}
-a.btns:hover{border-color:#398439;background-color:#449d44;filter:none;}
-.btnc,.btnc:hover{width:60px;height:26px;border-color:#d43f3a;background:#d9534f;color:#fff;}
-a.btnc:hover{border-color:#ac2925;background-color:#c9302c;filter:none;}
-.switchbutton-on{background:#439dd1;color:#fff;}
-.switchbutton-off{background:#E1E1E1;color:#000;}
+.bannerbtn:hover{
+    background: #d73925;filter: none;
+}
+.endbtndiv {
+    padding:8px 10px 8px 0px;text-align:right;
+    background:#f9f9f9;border-top:1px solid #f0f0f0;
+}
+.l-btn-left {margin:2px;}
 
-/*顶部菜单*/
+
+.switchbutton-on { background: #eb5f4e; color: #fff; }  /*开时的样式*/  
+.switchbutton-off { background: #E1E1E1; color: #000000; } /*关时的样式*/  
+
 .bannerMenu{padding:8px 12px 10px 12px;height:36px;color:#fff;text-decoration:none;font-size:18px;line-height:16px;filter:none;}
 .bannerMenu lable{font-size:17px;}
 .bannerMenu span{font-size:13px;font-family:'Microsoft YaHei',Arial,Verdana;letter-spacing:1px}
-#north .topmenu{border-right:1px #367fa9 solid;background:#3c8dbc;text-align:center}
-#north .topmenu:hover{background:#367fa9;text-align:center}
-#north .selected{border-right:1px #367fa9 solid;background:#367fa9;text-align:center}
-#north .splitborder{width:1px;background:#449d44;}
+#north .topmenu{border-right:1px #d73925 solid;background:#dd4b39;text-align:center}
+#north .topmenu:hover{background:#d73925;text-align:center}
+#north .selected{border-right:1px #d73925 solid;background:#d73925;text-align:center}
+#north .splitborder{width:1px;background:#d73925;}
+
+
