--- a/demo/topjui/themes/yushan/topjui.yellow.css
+++ b/demo/topjui/themes/yushan/topjui.yellow.css
@@ -1,50 +1,62 @@
 ﻿/*easyui mian*/
-.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color:#d3d3d3;background:#f9fafc;color:#777;}
-.layout-panel-west .panel-header .panel-title{padding-left:20px;height:30px;color:#777;line-height:30px;}
+#west {border:solid 1px;background:#2c3b41;}
+.layout-panel-west .panel-header{ padding-left:5px; width:220px;height:30px;border-color: #1e282c;background:#1e282c;color:#777; line-height:25px;;filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#1e282c,endColorstr=#1e282c,GradientType=0)}
+.layout-panel-west .panel-header .panel-title{padding-left:20px;height:30px;color:#4b646f;line-height:30px;}
 .label-mes{position:absolute;top:3px;display:none;margin-left:13px;padding:2px 3px;border-radius:3px;text-align:center;font-size:9px;line-height:.9;}
 .label-success{background-color:#00a65a !important;}
-#west .tree-icon{margin-top: 9px;}
+#west .tree-icon{margin-top: 9px;color:#fff;}
 #west .tree-hit{margin-top: 7px;}
-#west .tree-node{padding-left:20px;height: 35px;line-height:30px;}
-#west .tree-title{ padding-left:7px;color:#444;line-height: 35px;}
+#west .tree-node{padding-left:20px;height: 35px;line-height:30px;border-bottom: dashed 1px #565656;}
+#west .tree-title{ padding-left:7px;color:#fff;line-height: 35px;}
 #west .tree-file{overflow:auto;background: url('');vertical-align: middle;}
 #west .tree-folder, .tree-folder-open{background: url('');line-height: 19px;}
-#west .tree-node-selected{background: #e7eaec;color:#444;}
-#west .tree-node-hover{background: #e7eaec;color: #000000;}
-#west .tree-node-hover .tree-title{color: #000000;}
+#west .tree-node-selected{background: #1e282c;}
+#west .tree-node-hover{background:#1e282c; color: #fff;}
+#west .tree-node-hover .tree-title{color: #fff;}
 #west .panel-header{padding-left: 20px;}
-#west .panel-body{border: 0px;background: #f9fafc;}
+#west .panel-body{background: #f9fafc;}
 #west .panel-icon{left: 14px;}
-#west .panel-title{padding-left: 20px;height: 30px;font-size: 12px;line-height: 30px;}
-#west .accordion{background: #F9FAFC;}
-#west .accordion-body {border:0px;}
-#west .accordion .accordion-header{height: 30px;border:0px;border-left:3px #F9FAFC solid;background: #f9fafc;color:#444;line-height: 30px;}
-#west .accordion .accordion-header-selected{border-left:3px #f39c12 solid;background: #e7eaec;}
-#west .accordion .accordion-header:hover{border-left:3px #f39c12 solid;background: #e7eaec;color: #000;}
-#west .accordion .accordion-header-selected .panel-title{color:#444;}
-#west .accordion .accordion-header .panel-title:hover{color: #333;}
+#west .panel-title{padding-left:18px;height: 30px;color:#b8c7ce;font-size: 12px; line-height: 30px;}
+#west .accordion{border:0px;background: #222d32;}
+#west .accordion-body {border:0px;background:#2c3b41;}
+#west .accordion .accordion-header{height: 30px;border-top:solid 1px #2c3b41;border-left:3px #222d32 solid;background: #222d32;color:#fff;line-height: 30px;}
+#west .accordion .accordion-header-selected{border-left:3px #f39c12 solid;background: #222d32;border-bottom:solid 1px #2c3b41;}
+#west .accordion .accordion-header:hover{border-left:3px #f39c12 solid;background: #1e282c;color: #fff;}
+#west .accordion .accordion-header-selected .panel-title{color:#fff;}
+#west .accordion .accordion-header .panel-title:hover{color: #fff;}
 #west .layout-split-west{border-right: 3px solid #efefef;}
-#west .tree-collapsed { display:inline-block; margin-top:13px; margin-right:0px;background:url(''); color:#000;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
+#west .tree-collapsed { display:inline-block; margin-top:13px; margin-right:0px;background:url(''); color:#fff;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
 #west .tree-collapsed:before{content:"\f0da";}
-#west .tree-expanded { display:inline-block;margin-top:13px; margin-right:0px;background:url(''); color:#000;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
+#west .tree-expanded { display:inline-block;margin-top:13px; margin-right:0px;background:url(''); color:#fff;font:normal normal normal 14px/1 FontAwesome;font-size:inherit;text-rendering:auto;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;}
 #west .tree-expanded:before{content:"\f0d7";}
-#center .tabs-panels{border-bottom: 0px;}
+#center #center .tabs-panels{border-bottom: 0px;}
 #west .panel-header,#west .panel-body{border:0px;}
-
-
+.panel-icon, .panel-tool {margin-top:-6px;}
+#west .panel-tool a{opacity:0.8;filter:alpha(opacity=20);}
+#west .panel-tool a:hover{opacity:1;filter:alpha(opacity=100);}
+#west .accordion-collapse {
+background: url('../../themes/yushan/images/accordion_arrows2.png') no-repeat 0 0;
+}
+#west .accordion-expand {
+  background: url('../../themes/yushan/images/accordion_arrows2.png') no-repeat -16px 0;
+}
+ .accordion-header .accordion-collapse {background: url('../../themes/yushan/images/accordion_arrows3.png') no-repeat 0 0;}
+ .accordion-header .accordion-expand {background: url('../../themes/yushan/images/accordion_arrows3.png') no-repeat -16px 0;}
 .user-image {float: left;margin-top: -6px;margin-right: 10px;width: 30px;height: 30px;border-radius: 50%;}
-.user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family:,'Microsoft YaHei',Arial,Verdana;}
+.user-name { float: left;display:block;overflow:hidden;padding-top:3px;width:120px;font-family:'Microsoft YaHei',Arial,Verdana;}
 .user-header{ padding-top:20px; background:#f39c12; color:#fff;text-align:center;font-family:'Microsoft YaHei',Arial,Verdana;}
 .user-header img{width:100px;height:100px;border-radius:50%;}
 
 #center .tabs li.tabs-selected a.tabs-inner{border-top-color: #f39c12;border-top-width: 3px;}
 .banner{width: 100%;height: 50px;background: #f39c12;color: #fff;}
 .banner .l-btn-text{margin:0px;}
-.banner .webname{width: 225px; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
+.banner .webname{width: 225px;background:#e08e0b; text-align:left; padding-left:10px; font-weight:bold; font-size: 20px;line-height: 25px; }
 .panel-icon, .panel-tool {margin-top:-6px;}
+#west .panel-tool a{opacity:0.8;filter:alpha(opacity=20);}
 /*easyui inner*/
 .window{padding: 0;border-width: 3px 1px 1px 1px;-webkit-border-radius: 5px;border-radius: 5px;box-shadow:1px 1px 50px rgba(0,0,0,.3);border-top-color: #f39c12;}
 .window .window-body{border-width:0px;}
+
 .window .window-header .panel-tool{right: 12px;}
 .window .window-header{height:30px;border-color: #e7eaec;background:#f9f9f9;}
 .window .window-header .panel-icon{left: 12px;color: #444;font-weight: normal;font-size: 14px;}
@@ -58,7 +70,6 @@
 .datagrid-cell, .datagrid-cell-group, .datagrid-header-rownumber, .datagrid-cell-rownumber{padding:0 7px;white-space: normal;}
 .accordion .accordion-header-selected {background: #e08e0b;}
 /*btn*/
-
 
 .bannerbtn{padding:18px 10px 6px 10px;height:25px;color:#fff;text-decoration:none;line-height:36px;}
 .bannerbtn:hover{background:#e08e0b;filter:none;}
